@@ -40,18 +40,21 @@ CoreBox::CoreBox(QWidget *parent) : QMainWindow(parent), ui(new Ui::CoreBox)
     qDebug() << "CoreBox opening";
     ui->setupUi(this);
 
+    //set a icon set for the whole app
     QIcon::setThemeName(sm.getThemeName());
 
+    //setup framless window
     ui->windows->tabBar()->installEventFilter(this);
-//    ui->windows->installEventFilter(this);
     setWindowFlags(Qt::FramelessWindowHint | Qt::WindowSystemMenuHint | Qt::SubWindow);
     ui->restoreButton->setVisible(false);
     ui->windows->setCornerWidget(ui->winbutn, Qt::BottomRightCorner);
 
+    //make the resizeable window button
     QSizeGrip *sizeGrip = new QSizeGrip(this);
     sizeGrip->setStyleSheet("QWidget{background-color: #EFEFEF ; width: 16px;height: 16px; background-image: url(:/icons/expand_b.svg); background-repeat: no-repeat ;background-position: center center ;}");
     ui->resize->addWidget(sizeGrip);
 
+    //setup window size and state
     if (sm.getBoxIsMaximize()) {
         on_maximizeButton_clicked();
     } else {
@@ -62,6 +65,15 @@ CoreBox::CoreBox(QWidget *parent) : QMainWindow(parent), ui(new Ui::CoreBox)
 
     BookmarkManage bk;
     bk.checkBook();
+
+//    QFileInfo info("/usr/share/applications/chromium.desktop");
+//    qDebug()<< info.isReadable();
+//    QFileIconProvider   provider;
+//    QIcon   icon = provider.icon(info);
+
+    QString name = "chromium";
+    QIcon   icon =  QIcon::fromTheme(name.toLower());
+    ui->start->setIcon(icon);
 }
 
 CoreBox::~CoreBox() {
@@ -323,6 +335,7 @@ void CoreBox::on_windows_tabCloseRequested(int index)
         }
     } else if (appName == "CorePDF") {
         corepdf *cpdf = ui->windows->findChild<corepdf*>("corepdf");
+//        cpdf->eclose();
         if (cpdf->close()){
             cpdf->deleteLater();
             ui->windows->removeTab(index);
