@@ -165,10 +165,6 @@ background-color: #1268A4;
          <property name="text">
           <string/>
          </property>
-         <property name="icon">
-          <iconset resource="../icons.qrc">
-           <normaloff>:/icons/Start.svg</normaloff>:/icons/Start.svg</iconset>
-         </property>
          <property name="iconSize">
           <size>
            <width>25</width>
